fix clipping issues with particles

--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -506,4 +506,6 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: fade(white, 20%);
+    width: 100%;
+    overflow-x: hidden;
 }
